--- a/SonicColorsSetEditor/Properties/Resources.resx
+++ b/SonicColorsSetEditor/Properties/Resources.resx
@@ -46,7 +46,7 @@
     
     mimetype: application/x-microsoft.net.object.binary.base64
     value   : The object must be serialized with 
-            : System.Serialization.Formatters.Binary.BinaryFormatter
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
             : and then encoded with base64 encoding.
     
     mimetype: application/x-microsoft.net.object.soap.base64
@@ -60,6 +60,7 @@
             : and then encoded with base64 encoding.
     -->
   <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
     <xsd:element name="root" msdata:IsDataSet="true">
       <xsd:complexType>
         <xsd:choice maxOccurs="unbounded">
@@ -68,9 +69,10 @@
               <xsd:sequence>
                 <xsd:element name="value" type="xsd:string" minOccurs="0" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" />
+              <xsd:attribute name="name" use="required" type="xsd:string" />
               <xsd:attribute name="type" type="xsd:string" />
               <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="assembly">
@@ -85,9 +87,10 @@
                 <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
                 <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
               </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
               <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
               <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
             </xsd:complexType>
           </xsd:element>
           <xsd:element name="resheader">
@@ -109,9 +112,45 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="CPKMakerNotFoundText" xml:space="preserve">
+    <value>WARNING: Could not find \"CpkMaker.dll!
+This is required to create and extract cpks.</value>
+  </data>
+  <data name="DolNotFoundText" xml:space="preserve">
+    <value>Could not find boot.dol!
+Make sure boot.dol is in the parent directory of "sonic2010_0"</value>
+  </data>
+  <data name="DolphinNotFoundText" xml:space="preserve">
+    <value>Could not find Dolphin!</value>
+  </data>
+  <data name="DolphinNotSetupText" xml:space="preserve">
+    <value>Dolphin is not set up yet!</value>
+  </data>
+  <data name="LocateDolphinText" xml:space="preserve">
+    <value>Please locate your Dolphin executable.</value>
+  </data>
+  <data name="LocateSCExecutableText" xml:space="preserve">
+    <value>Please locate Sonic Colors' executable.</value>
+  </data>
+  <data name="MultipleSetDataFoundText" xml:space="preserve">
+    <value>One or more set files has been found
+Would you like to load one of the set files?</value>
+  </data>
+  <data name="NoTemplatesText" xml:space="preserve">
+    <value>No Templates Found!
+Please download the Templates folder from HedgeLib's Github page
+and place it in the same directory as the executable
+https://github.com/Radfordhound/HedgeLib/tree/master/HedgeEdit/Templates</value>
+  </data>
+  <data name="TemplatesURL" xml:space="preserve">
+    <value>https://github.com/Radfordhound/HedgeLib/tree/master/HedgeEdit/Templates</value>
+  </data>
+  <data name="Unknown_InstructionFoundText" xml:space="preserve">
+    <value>The Guest has stopped working!</value>
+  </data>
 </root>
